--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,23 @@
         app:srcCompat="@drawable/lumia"
         android:contentDescription="TODO" />
 
+    <Button
+        android:id="@+id/buttonConfigure2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:onClick="gotoDebugMenu"
+        android:text="Debug Menu"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonConfigure"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
