--- a/app/src/main/res/layout/activity_actions.xml
+++ b/app/src/main/res/layout/activity_actions.xml
@@ -19,4 +19,26 @@
         app:srcCompat="@drawable/lumia"
         android:contentDescription="TODO" />
 
+    <TextView
+        android:id="@+id/textLabelTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="actions"
+        android:textAllCaps="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:fontFamily="serif"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/colorPrimary" />
+
 </android.support.constraint.ConstraintLayout>
