--- a/app/src/main/res/layout/activity_actions.xml
+++ b/app/src/main/res/layout/activity_actions.xml
@@ -10,14 +10,63 @@
         android:id="@+id/imageViewBG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/lumia"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/lumia" />
+
+    <CheckBox
+        android:id="@+id/checkBoxInfrared"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Infrared"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxMicrophone"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxMicrophone" />
+
+    <CheckBox
+        android:id="@+id/checkBoxAccelerometer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:text="Accelerometer"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textLabelTitle" />
+
+    <CheckBox
+        android:id="@+id/checkBoxMicrophone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Microphone"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxAccelerometer"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxAccelerometer" />
+
+    <CheckBox
+        android:id="@+id/checkBoxCamera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Camera"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="@+id/checkBoxInfrared"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxInfrared" />
 
     <TextView
         android:id="@+id/textLabelTitle"
