Set mesh debug to correct activity, added asking for permissions.

--- a/app/src/main/res/layout/activity_debug_mesh_row_devices.xml
+++ b/app/src/main/res/layout/activity_debug_mesh_row_devices.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:background="?android:attr/activatedBackgroundIndicator"
-    android:padding="6dip">
+    android:padding="6dip"
+    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
     <LinearLayout
         android:orientation="vertical"
