--- a/app/src/main/res/layout/activity_debug_mesh_device_detail.xml
+++ b/app/src/main/res/layout/activity_debug_mesh_device_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/details_view"
-    android:visibility="gone">
+    android:visibility="gone"
+    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
