--- a/app/src/main/res/layout/activity_debug_mesh_device_list.xml
+++ b/app/src/main/res/layout/activity_debug_mesh_device_list.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="3dp">
+    android:paddingTop="3dp"
+    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
