--- a/app/src/main/res/layout/activity_debug_mesh.xml
+++ b/app/src/main/res/layout/activity_debug_mesh.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:id="@+id/linearLayout1"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="8sp">
         <fragment
             class="com.aftac.plugs.MeshNetwork.DeviceListFragment"
             android:id="@+id/frag_list"
