--- a/app/src/main/res/layout/activity_debug_mesh_device_detail.xml
+++ b/app/src/main/res/layout/activity_debug_mesh_device_detail.xml
@@ -59,13 +59,13 @@
         android:layout_height="37dp"
         android:layout_marginBottom="3dp"
         android:background="@android:color/background_dark">
+
         <TextView
+            android:id="@+id/status_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
-            android:textColor="@android:color/white"
-            android:id="@+id/status_text">
-        </TextView>
+            android:textColor="@android:color/white"></TextView>
     </LinearLayout>
 </FrameLayout>
