Cleaned-up unnecessary files, and added comments the mesh code

--- a/app/src/main/res/layouts/debug/layout/activity_mesh_device_row.xml
+++ b/app/src/main/res/layouts/debug/layout/activity_mesh_device_row.xml
@@ -13,7 +13,8 @@
         android:id="@+id/device_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         android:text="Device"
         android:textColor="@android:color/black"
@@ -23,7 +24,8 @@
         android:id="@+id/device_details"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textColor="@android:color/black"
