--- a/app/src/main/res/layout/activity_debug_menu.xml
+++ b/app/src/main/res/layout/activity_debug_menu.xml
@@ -97,7 +97,8 @@
                 android:layout_height="100dp"
                 android:layout_margin="12dp"
                 android:layout_weight="1"
-                android:text="----"
+                android:onClick="gotoDebugTriggers"
+                android:text="Trigger"
                 android:textSize="24dp" />
         </TableRow>
 
